NIFI-12572 Updated nifi-azure-bundle using current API methods
This closes #8210

Signed-off-by: David Handermann <exceptionfactory@apache.org>