@@ -18,6 +18,7 @@ package org.apache.nifi.parameter.azure;
 
 import com.azure.core.http.rest.PagedIterable;
 import com.azure.security.keyvault.secrets.SecretClient;
+import com.azure.security.keyvault.secrets.implementation.SecretPropertiesHelper;
 import com.azure.security.keyvault.secrets.models.KeyVaultSecret;
 import com.azure.security.keyvault.secrets.models.SecretProperties;
 import org.apache.nifi.components.ConfigVerificationResult;
@@ -37,13 +38,12 @@ import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -61,7 +61,7 @@ public class TestAzureKeyVaultSecretsParameterProvider {
     @Spy
     private AzureKeyVaultSecretsParameterProvider parameterProvider;
 
-    private final List<Parameter> mySecretParameters = Arrays.asList(
+    private final List<Parameter> mySecretParameters = List.of(
             parameter("paramA", "valueA"),
             parameter("paramB", "valueB"),
             parameter("otherC", "valueOther"),
@@ -69,11 +69,11 @@ public class TestAzureKeyVaultSecretsParameterProvider {
             parameter("nonSensitiveE", "valueE"),
             parameter("otherF", "valueF")
     );
-    private final List<Parameter> otherSecretParameters = Arrays.asList(
+    private final List<Parameter> otherSecretParameters = List.of(
             parameter("paramG", "valueG"),
             parameter("otherH", "valueOther")
     );
-    private final List<ParameterGroup> mockParameterGroups = Arrays.asList(
+    private final List<ParameterGroup> mockParameterGroups = List.of(
             new ParameterGroup("MySecret", mySecretParameters),
             new ParameterGroup("OtherSecret", otherSecretParameters)
     );
@@ -84,79 +84,61 @@ public class TestAzureKeyVaultSecretsParameterProvider {
     }
 
     @Test
-    public void testFetchParametersWithNoSecrets() throws IOException, InitializationException {
-        final List<ParameterGroup> parameterGroups = Collections.singletonList(new ParameterGroup("MySecret", Collections.emptyList()));
+    public void testFetchParametersWithNoSecrets() throws InitializationException {
+        final List<ParameterGroup> parameterGroups = List.of(new ParameterGroup("MySecret", Collections.emptyList()));
         mockSecretClient(parameterGroups);
         runProviderTest(0, ConfigVerificationResult.Outcome.SUCCESSFUL);
     }
 
     @Test
-    public void testFetchParameters() throws IOException, InitializationException {
+    public void testFetchParameters() throws InitializationException {
         mockSecretClient(mockParameterGroups);
-        runProviderTest( 8, ConfigVerificationResult.Outcome.SUCCESSFUL);
+        runProviderTest(8, ConfigVerificationResult.Outcome.SUCCESSFUL);
     }
 
     @Test
-    public void testFetchDisabledParameters() throws IOException, InitializationException {
-        final List<SecretProperties> secretPropertiesList = new ArrayList<>();
-        for (final ParameterGroup group : mockParameterGroups) {
-            for (final Parameter parameter : group.getParameters()) {
-                final SecretProperties secretProperties = mock(SecretProperties.class);
+    public void testFetchDisabledParameters() throws InitializationException {
+        final List<SecretProperties> secretPropertiesList = Stream
+                .generate(() -> new SecretProperties().setEnabled(false))
+                .limit(mockParameterGroups.stream().mapToInt(group -> group.getParameters().size()).sum())
+                .toList();
 
-                when(secretProperties.isEnabled()).thenReturn(false);
-
-                secretPropertiesList.add(secretProperties);
-            }
-
-        }
-
-        final PagedIterable<SecretProperties> mockIterable = mock(PagedIterable.class);
-        when(secretClient.listPropertiesOfSecrets()).thenReturn(mockIterable);
-        when(mockIterable.iterator()).thenReturn(secretPropertiesList.iterator());
-        runProviderTest( 0, ConfigVerificationResult.Outcome.SUCCESSFUL);
+        mockListPropertiesOfSecrets(secretPropertiesList);
+        runProviderTest(0, ConfigVerificationResult.Outcome.SUCCESSFUL);
     }
 
     @Test
-    public void testFetchParametersWithNullTagsShouldNotThrowError() throws IOException, InitializationException {
+    public void testFetchParametersWithNullTagsShouldNotThrowError() throws InitializationException {
         final List<SecretProperties> secretPropertiesList = new ArrayList<>();
         for (final ParameterGroup group : mockParameterGroups) {
             for (final Parameter parameter : group.getParameters()) {
                 final String parameterName = parameter.getDescriptor().getName();
                 final String parameterValue = parameter.getValue();
-                final KeyVaultSecret secret = mock(KeyVaultSecret.class);
-                when(secret.getName()).thenReturn(parameterName);
-                when(secret.getValue()).thenReturn(parameterValue);
 
-                final SecretProperties secretProperties = mock(SecretProperties.class);
-                when(secret.getProperties()).thenReturn(secretProperties);
+                final SecretProperties secretProperties = new SecretProperties();
+                SecretPropertiesHelper.setName(secretProperties, parameterName);
+                secretProperties.setEnabled(true);
 
-                final Map<String, String> tags = null;
-                when(secretProperties.getTags()).thenReturn(tags);
+                final KeyVaultSecret secret = new KeyVaultSecret(parameterName, parameterValue);
+                secret.setProperties(secretProperties);
 
-                when(secretProperties.getName()).thenReturn(parameterName);
-                when(secretProperties.getVersion()).thenReturn(null);
-                when(secretProperties.isEnabled()).thenReturn(true);
                 when(secretClient.getSecret(eq(parameterName), any())).thenReturn(secret);
-
                 secretPropertiesList.add(secretProperties);
             }
-
         }
 
-        final PagedIterable<SecretProperties> mockIterable = mock(PagedIterable.class);
-        when(secretClient.listPropertiesOfSecrets()).thenReturn(mockIterable);
-        when(mockIterable.iterator()).thenReturn(secretPropertiesList.iterator());
-        runProviderTest( 0, ConfigVerificationResult.Outcome.SUCCESSFUL);
+        mockListPropertiesOfSecrets(secretPropertiesList);
+        runProviderTest(0, ConfigVerificationResult.Outcome.SUCCESSFUL);
     }
 
     @Test
-    public void testFetchParametersListFailure() throws IOException, InitializationException {
+    public void testFetchParametersListFailure() throws InitializationException {
         when(secretClient.listPropertiesOfSecrets()).thenThrow(new RuntimeException("Fake RuntimeException"));
         runProviderTest(0, ConfigVerificationResult.Outcome.FAILED);
     }
 
     @Test
-    public void testFetchParametersWithGroupNameRegex() throws IOException, InitializationException {
+    public void testFetchParametersWithGroupNameRegex() throws InitializationException {
         mockSecretClient(mockParameterGroups);
         final Map<PropertyDescriptor, String> properties = new HashMap<>();
         properties.put(AzureKeyVaultSecretsParameterProvider.GROUP_NAME_PATTERN, "MySecret");
@@ -169,44 +151,43 @@ public class TestAzureKeyVaultSecretsParameterProvider {
             for (final Parameter parameter : group.getParameters()) {
                 final String parameterName = parameter.getDescriptor().getName();
                 final String parameterValue = parameter.getValue();
-                final KeyVaultSecret secret = mock(KeyVaultSecret.class);
-                when(secret.getName()).thenReturn(parameterName);
-                when(secret.getValue()).thenReturn(parameterValue);
 
-                final SecretProperties secretProperties = mock(SecretProperties.class);
-                when(secret.getProperties()).thenReturn(secretProperties);
+                final SecretProperties secretProperties = new SecretProperties();
+                SecretPropertiesHelper.setName(secretProperties, parameterName);
+                secretProperties.setTags(
+                        Map.of(AzureKeyVaultSecretsParameterProvider.GROUP_NAME_TAG, group.getGroupName())
+                );
+                secretProperties.setEnabled(true);
 
-                final Map<String, String> tags = new HashMap<>();
-                tags.put(AzureKeyVaultSecretsParameterProvider.GROUP_NAME_TAG, group.getGroupName());
-                when(secretProperties.getTags()).thenReturn(tags);
+                final KeyVaultSecret secret = new KeyVaultSecret(parameterName, parameterValue);
+                secret.setProperties(secretProperties);
 
-                when(secretProperties.getName()).thenReturn(parameterName);
-                when(secretProperties.getVersion()).thenReturn(null);
-                when(secretProperties.isEnabled()).thenReturn(true);
                 when(secretClient.getSecret(eq(parameterName), any())).thenReturn(secret);
-
                 secretPropertiesList.add(secretProperties);
             }
-
         }
 
+        mockListPropertiesOfSecrets(secretPropertiesList);
+    }
+
+    private void mockListPropertiesOfSecrets(final List<SecretProperties> secretPropertiesList) {
         final PagedIterable<SecretProperties> mockIterable = mock(PagedIterable.class);
-        when(secretClient.listPropertiesOfSecrets()).thenReturn(mockIterable);
         when(mockIterable.iterator()).thenReturn(secretPropertiesList.iterator());
+        when(secretClient.listPropertiesOfSecrets()).thenReturn(mockIterable);
     }
 
-    private List<ParameterGroup> runProviderTest(final int expectedCount,
-                                                 final ConfigVerificationResult.Outcome expectedOutcome)
-            throws IOException, InitializationException {
-        final Map<PropertyDescriptor, String> properties = new HashMap<>();
-        properties.put(AzureKeyVaultSecretsParameterProvider.GROUP_NAME_PATTERN, ".*");
-        return runProviderTestWithProperties(expectedCount, expectedOutcome, properties);
+    private void runProviderTest(final int expectedCount, final ConfigVerificationResult.Outcome expectedOutcome)
+            throws InitializationException {
+        runProviderTestWithProperties(
+                expectedCount, expectedOutcome,
+                Map.of(AzureKeyVaultSecretsParameterProvider.GROUP_NAME_PATTERN, ".*")
+        );
     }
 
-    private List<ParameterGroup> runProviderTestWithProperties(final int expectedCount,
-                                                 final ConfigVerificationResult.Outcome expectedOutcome,
-                                                 final Map<PropertyDescriptor, String> properties)
-            throws InitializationException, IOException {
+    private void runProviderTestWithProperties(final int expectedCount,
+                                               final ConfigVerificationResult.Outcome expectedOutcome,
+                                               final Map<PropertyDescriptor, String> properties)
+            throws InitializationException {
         final MockParameterProviderInitializationContext initContext = new MockParameterProviderInitializationContext("id", "name",
                 new MockComponentLog("providerId", parameterProvider));
         parameterProvider.initialize(initContext);
@@ -219,9 +200,9 @@ public class TestAzureKeyVaultSecretsParameterProvider {
             assertThrows(RuntimeException.class, () -> parameterProvider.fetchParameters(mockConfigurationContext));
         } else {
             parameterGroups = parameterProvider.fetchParameters(mockConfigurationContext);
-            final int parameterCount = (int) parameterGroups.stream()
-                    .flatMap(group -> group.getParameters().stream())
-                    .count();
+            final int parameterCount = parameterGroups.stream()
+                    .mapToInt(group -> group.getParameters().size())
+                    .sum();
             assertEquals(expectedCount, parameterCount);
         }
 
@@ -229,9 +210,7 @@ public class TestAzureKeyVaultSecretsParameterProvider {
         final List<ConfigVerificationResult> results = ((VerifiableParameterProvider) parameterProvider).verify(mockConfigurationContext, initContext.getLogger());
 
         assertEquals(1, results.size());
-        assertEquals(expectedOutcome, results.get(0).getOutcome());
-
-        return parameterGroups;
+        assertEquals(expectedOutcome, results.getFirst().getOutcome());
     }
 
     private static Parameter parameter(final String name, final String value) {
