@@ -153,7 +153,7 @@ public class TestConsumeAzureEventHub {
         testRunner.assertNotValid();
         testRunner.setProperty(ConsumeAzureEventHub.USE_MANAGED_IDENTITY,"true");
         testRunner.assertValid();
-        testRunner.setProperty(ConsumeAzureEventHub.TRANSPORT_TYPE, AzureEventHubTransportType.AMQP_WEB_SOCKETS.getValue());
+        testRunner.setProperty(ConsumeAzureEventHub.TRANSPORT_TYPE, AzureEventHubTransportType.AMQP_WEB_SOCKETS);
         testRunner.assertValid();
         configureProxyControllerService();
         testRunner.assertValid();
@@ -199,7 +199,7 @@ public class TestConsumeAzureEventHub {
         testRunner.setProperty(ConsumeAzureEventHub.STORAGE_ACCOUNT_NAME, STORAGE_ACCOUNT_NAME);
         testRunner.setProperty(ConsumeAzureEventHub.STORAGE_SAS_TOKEN, STORAGE_TOKEN);
         testRunner.assertValid();
-        testRunner.setProperty(ConsumeAzureEventHub.TRANSPORT_TYPE, AzureEventHubTransportType.AMQP_WEB_SOCKETS.getValue());
+        testRunner.setProperty(ConsumeAzureEventHub.TRANSPORT_TYPE, AzureEventHubTransportType.AMQP_WEB_SOCKETS);
         testRunner.assertValid();
         configureProxyControllerService();
         testRunner.assertValid();
@@ -217,7 +217,7 @@ public class TestConsumeAzureEventHub {
         testRunner.setProperty(ConsumeAzureEventHub.STORAGE_ACCOUNT_NAME, STORAGE_ACCOUNT_NAME);
         testRunner.setProperty(ConsumeAzureEventHub.STORAGE_ACCOUNT_KEY, STORAGE_ACCOUNT_KEY);
         testRunner.assertValid();
-        testRunner.setProperty(ConsumeAzureEventHub.TRANSPORT_TYPE, AzureEventHubTransportType.AMQP_WEB_SOCKETS.getValue());
+        testRunner.setProperty(ConsumeAzureEventHub.TRANSPORT_TYPE, AzureEventHubTransportType.AMQP_WEB_SOCKETS);
         testRunner.assertValid();
         configureProxyControllerService();
         testRunner.assertValid();
@@ -234,13 +234,13 @@ public class TestConsumeAzureEventHub {
 
         final List<MockFlowFile> flowFiles = testRunner.getFlowFilesForRelationship(ConsumeAzureEventHub.REL_SUCCESS);
         assertEquals(1, flowFiles.size());
-        final MockFlowFile flowFile = flowFiles.get(0);
+        final MockFlowFile flowFile = flowFiles.getFirst();
         flowFile.assertContentEquals(FIRST_CONTENT);
         assertEventHubAttributesFound(flowFile);
 
         final List<ProvenanceEventRecord> provenanceEvents = testRunner.getProvenanceEvents();
         assertEquals(1, provenanceEvents.size());
-        final ProvenanceEventRecord provenanceEvent1 = provenanceEvents.get(0);
+        final ProvenanceEventRecord provenanceEvent1 = provenanceEvents.getFirst();
         assertEquals(ProvenanceEventType.RECEIVE, provenanceEvent1.getEventType());
         assertEquals(EXPECTED_TRANSIT_URI, provenanceEvent1.getTransitUri());
     }
@@ -280,13 +280,13 @@ public class TestConsumeAzureEventHub {
 
         final List<MockFlowFile> flowFiles = testRunner.getFlowFilesForRelationship(ConsumeAzureEventHub.REL_SUCCESS);
         assertEquals(1, flowFiles.size());
-        final MockFlowFile ff1 = flowFiles.get(0);
+        final MockFlowFile ff1 = flowFiles.getFirst();
         ff1.assertContentEquals(FIRST_CONTENT + SECOND_CONTENT);
         assertEventHubAttributesFound(ff1);
 
         final List<ProvenanceEventRecord> provenanceEvents = testRunner.getProvenanceEvents();
         assertEquals(1, provenanceEvents.size());
-        final ProvenanceEventRecord provenanceEvent1 = provenanceEvents.get(0);
+        final ProvenanceEventRecord provenanceEvent1 = provenanceEvents.getFirst();
         assertEquals(ProvenanceEventType.RECEIVE, provenanceEvent1.getEventType());
         assertEquals(EXPECTED_TRANSIT_URI, provenanceEvent1.getTransitUri());
     }
@@ -306,20 +306,20 @@ public class TestConsumeAzureEventHub {
 
         final List<MockFlowFile> flowFiles = testRunner.getFlowFilesForRelationship(ConsumeAzureEventHub.REL_SUCCESS);
         assertEquals(1, flowFiles.size());
-        final MockFlowFile ff1 = flowFiles.get(0);
+        final MockFlowFile ff1 = flowFiles.getFirst();
         ff1.assertContentEquals(FIRST_CONTENT + SECOND_CONTENT + FOURTH_CONTENT);
         assertEventHubAttributesFound(ff1);
 
         final List<MockFlowFile> failedFFs = testRunner.getFlowFilesForRelationship(ConsumeAzureEventHub.REL_PARSE_FAILURE);
         assertEquals(1, failedFFs.size());
-        final MockFlowFile failed1 = failedFFs.get(0);
+        final MockFlowFile failed1 = failedFFs.getFirst();
         failed1.assertContentEquals(THIRD_CONTENT);
         assertEventHubAttributesFound(failed1);
 
         final List<ProvenanceEventRecord> provenanceEvents = testRunner.getProvenanceEvents();
         assertEquals(2, provenanceEvents.size());
 
-        final ProvenanceEventRecord provenanceEvent1 = provenanceEvents.get(0);
+        final ProvenanceEventRecord provenanceEvent1 = provenanceEvents.getFirst();
         assertEquals(ProvenanceEventType.RECEIVE, provenanceEvent1.getEventType());
         assertEquals(EXPECTED_TRANSIT_URI, provenanceEvent1.getTransitUri());
 
@@ -346,14 +346,14 @@ public class TestConsumeAzureEventHub {
 
         final List<MockFlowFile> failedFFs = testRunner.getFlowFilesForRelationship(ConsumeAzureEventHub.REL_PARSE_FAILURE);
         assertEquals(1, failedFFs.size());
-        final MockFlowFile failed1 = failedFFs.get(0);
+        final MockFlowFile failed1 = failedFFs.getFirst();
         failed1.assertContentEquals(FIRST_CONTENT);
         assertEventHubAttributesFound(failed1);
 
         final List<ProvenanceEventRecord> provenanceEvents = testRunner.getProvenanceEvents();
         assertEquals(1, provenanceEvents.size());
 
-        final ProvenanceEventRecord provenanceEvent1 = provenanceEvents.get(0);
+        final ProvenanceEventRecord provenanceEvent1 = provenanceEvents.getFirst();
         assertEquals(ProvenanceEventType.RECEIVE, provenanceEvent1.getEventType());
         assertEquals(EXPECTED_TRANSIT_URI, provenanceEvent1.getTransitUri());
     }
@@ -373,20 +373,20 @@ public class TestConsumeAzureEventHub {
 
         final List<MockFlowFile> flowFiles = testRunner.getFlowFilesForRelationship(ConsumeAzureEventHub.REL_SUCCESS);
         assertEquals(1, flowFiles.size());
-        final MockFlowFile ff1 = flowFiles.get(0);
+        final MockFlowFile ff1 = flowFiles.getFirst();
         ff1.assertContentEquals(FIRST_CONTENT + THIRD_CONTENT + FOURTH_CONTENT);
         assertEventHubAttributesFound(ff1);
 
         final List<MockFlowFile> failedFFs = testRunner.getFlowFilesForRelationship(ConsumeAzureEventHub.REL_PARSE_FAILURE);
         assertEquals(1, failedFFs.size());
-        final MockFlowFile failed1 = failedFFs.get(0);
+        final MockFlowFile failed1 = failedFFs.getFirst();
         failed1.assertContentEquals(SECOND_CONTENT);
         assertEventHubAttributesFound(failed1);
 
         final List<ProvenanceEventRecord> provenanceEvents = testRunner.getProvenanceEvents();
         assertEquals(2, provenanceEvents.size());
 
-        final ProvenanceEventRecord provenanceEvent1 = provenanceEvents.get(0);
+        final ProvenanceEventRecord provenanceEvent1 = provenanceEvents.getFirst();
         assertEquals(ProvenanceEventType.RECEIVE, provenanceEvent1.getEventType());
         assertEquals(EXPECTED_TRANSIT_URI, provenanceEvent1.getTransitUri());
 
